Success last version

--- a/TCCII.API.Authentication/TCCII.Deputados.API.csproj
+++ b/TCCII.API.Authentication/TCCII.Deputados.API.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TCCII.Infrastructure\TCCII.Infrastructure.csproj" />
+    <ProjectReference Include="..\TCCII.Infrastructure\TCCII.Deputados.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
