--- a/TCCII.Infrastructure/TCCII.Deputados.Infrastructure.csproj
+++ b/TCCII.Infrastructure/TCCII.Deputados.Infrastructure.csproj
@@ -20,7 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\TCCII.Core\TCCII.Core.csproj" />
+		<ProjectReference Include="..\TCCII.Core\TCCII.Deputados.Core.csproj" />
 	</ItemGroup>
 
 </Project>
