--- a/TCCII.API.Authentication/appsettings.json
+++ b/TCCII.API.Authentication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TCCIIDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=srv-sql-tcc.database.windows.net;Initial Catalog=db-sql-tcc;User ID=victor.tcc;Password=Senha123!;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
   },
   "AllowedHosts": "*"
