--- a/TCCII.API.Authentication/appsettings.json
+++ b/TCCII.API.Authentication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TCCIIDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=srv-sql-tcc.database.windows.net;Initial Catalog=db-sql-tcc;User ID=victor.tcc;Password=Senha123!;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
   },
   "AllowedHosts": "*"
